# studdybuddy

./: .gitignore  LICENSE  README.md  package.json
.github/workflows/: ci.yml
backend/: chat_completion.py  main.py  pyproject.toml  requirements.txt  test.py
backend/agents/: flashcard_generator.py  quiz_generator.py  refiner.py  task_manager.py
backend/tools/: chat_completion.py  database.py  group_chat.py  models.py  pdf_reader.py
frontend/studdybuddy/: package.json
frontend/studdybuddy/src/: App.tsx  index.css  main.tsx
frontend/studdybuddy/src/elements/: Flashcard.css  Flashcard.tsx  LoadingSpinner.css  LoadingSpinner.tsx  LoginButton.tsx  LoginLogoutButton.css  LogoutButton.tsx  Navbar.css  Navbar.tsx  Quiz.css  Quiz.tsx
frontend/studdybuddy/src/pages/: Account.css  Account.tsx  Flashcards.css  Flashcards.tsx  Games.tsx  Home.tsx  Quizzes.css  Quizzes.tsx  SavedFlashcards.css  SavedFlashcards.tsx  Upload.css  Upload.tsx
