[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "openai>=1.79.0",
    "psycopg2-binary>=2.9.10",
    "ag2>=0.9",
    "pymupdf>=1.26.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]
